syntax = "proto3";

service WorkflowOrchestrator {
  rpc ExecuteWorkflow(ExecuteWorkflowRequest) returns (ExecuteWorkflowResult);
}

service TaskExecutor {
  // MakeReservation makes a reservation based on given information
  rpc ExecuteTask(ExecuteTaskRequest) returns (ExecuteTaskResponse);
}

message ExecuteWorkflowRequest {
  int64 workflowId = 1;
  bytes padding = 2;
}

message ExecuteWorkflowResult {
  bool ok = 1;
  bytes padding = 2;
}

message ExecuteTaskRequest {
  int64 taskId = 1;
  int32 durationMilli = 2;
  bytes padding = 3;
}

message ExecuteTaskResponse {
  bool ok = 1;
  bytes padding = 2;
}